--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.sublime-project
 *.sublime-workspace
 
+
 # Python
 __pycache__/
 *.pyc
@@ -32,6 +33,26 @@ env/
 # Dependency directories
 lib/
 lib64/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Distribution / packaging
 .Python
